5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1649_1055.log
== TEST (2019-04-15 22:33:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
Velocidade=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(velocidade**2).sin(radians(angulo)*2)/9,8
if(abs(0,1)):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    r=(velocidade**2).sin(radians(angulo)*2)/9,8
NameError: name 'velocidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:34:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
V=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2).sin(radians(angulo)*2)/9,8
if(abs(0,1)):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    r=(v**2).sin(radians(angulo)*2)/9,8
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:34:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2).sin(radians(angulo)*2)/9,8
if(abs(0,1)):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    r=(v**2).sin(radians(angulo)*2)/9,8
AttributeError: 'float' object has no attribute 'sin'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:36:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2).sin(radians(angulo)*2)/9,8
if(abs(0,1)):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    r=(v**2).sin(radians(angulo)*2)/9,8
AttributeError: 'float' object has no attribute 'sin'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:36:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2).sin(radians(angulo)*2)/9,8
if(abs(0,1)):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.184483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 8, in <module>
    r=(v**2).sin(radians(angulo)*2)/9,8
AttributeError: 'float' object has no attribute 'sin'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:37:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(0,1)):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(abs(0,1)):
TypeError: abs() takes exactly one argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:38:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r)<0,1):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.209926
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 9, in <module>
    if(abs(distancia-r)<0,1):
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r)<0,1):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(abs(distancia-r)<0,1):
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:39:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r) <0,1):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.151278
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 9, in <module>
    if(abs(distancia-r) <0,1):
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:39:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r) <0,1):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.232035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 9, in <module>
    if(abs(distancia-r) <0,1):
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:39:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r) <0,1):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.241084
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 9, in <module>
    if(abs(distancia-r) <0,1):
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r) <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(abs(distancia-r) <0,1): 
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:40:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r) <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.213575
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 9, in <module>
    if(abs(distancia-r) <0,1): 
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:41:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r) <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.154193
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 9, in <module>
    if(abs(distancia-r) <0,1): 
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:41:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia -r) <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.165653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 9, in <module>
    if(abs(distancia -r) <0,1): 
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:41:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia) <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.288581
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:42:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia) <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:42:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r) <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.23636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 9, in <module>
    if(abs(distancia-r) <0,1): 
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:43:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r) <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(abs(distancia-r) <0,1): 
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:45:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.15012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 9, in <module>
    if(abs <0,1): 
TypeError: unorderable types: builtin_function_or_method() < int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:45:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=(v**2)*sin(radians(angulo)*2)/9,8
if(abs <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(abs <0,1): 
TypeError: '<' not supported between instances of 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:47:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
vel=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=( ((vel)**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r)<0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.148249
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 9
    if(abs(distancia-r)<0,1): 
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:48:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
vel=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=( ((vel)**2)*sin(radians(angulo)*2)/9,8
if(abs(float(distancia-r))<0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.235965
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 9
    if(abs(float(distancia-r))<0,1): 
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:48:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
vel=float(input("digite a velocidade:"))
angulo=float(input("digite o angulo:"))
distancia=float(input("digite a distancia:"))
r=( ((vel)**2)*sin(radians(angulo)*2)/9,8
if(abs(distancia-r) <0,1): 
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
-- EXECUTION TIME:
0.137209
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 9
    if(abs(distancia-r) <0,1): 
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
